fix some method in parse input

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                                     <input type="text" class="form-control" placeholder="Recent_Price" disabled>
                                 </th>
                                 <th>
+                                    <input type="text" class="form-control" placeholder="Filled" disabled>
+                                </th>
+                                <th>
                                     <input type="text" class="form-control" placeholder="Amount" disabled>
                                 </th>
                                 <th>
